Sun Oct 21 12:50:39 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/LSOCK.cpp: The ACE_LSOCK::recv_handle() was returning success
	  without setting the I/O handle.  Thanks to Rick Ohnemus
 	  <rick.ohnemus@systemware.com> for reporting this.

	* ace/config-freebsd-pthread.h: Changed
          #if (__FreeBSD_version > 430000) to
	  #if (__FreeBSD_version > 440000) to get ACE to work with FreeBSD 4.4.
	  Thanks to Gu Song <gusong_m@yahoo.com> for reporting this.

Fri Oct 19 06:44:17 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* examples/Reactor/WFMO_Reactor/test_window_messages.cpp:
	  Don't use a global Event_Handler object since this violates the
 	  design rules for the ACE_Reactor.	
  
Sun Oct 21 13:39:27 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Added the Quoter example in
	  $TAO_ROOT/examples to the list of tests in the daily builds. 

Thu Oct 18 20:56:53 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Proactor_Test.cpp:

	  Added no-op main() function for platforms that do not support
	  asynchronous IO.

Thu Oct 18 22:46:09 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/TP_Reactor.h:
	* ace/TP_Reactor.cpp: Fixed warnings in Sun CC and TRU 64 builds. 

Thu Oct 18 20:42:55 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Proactor_Test.cpp:

	  Fixed Unicode build errors.

Thu Oct 18 19:52:44 2001  Craig Rodrigues <crodrigu@bbn.com>

	* ace/SString.h: clarify example in comments to ACE_Tokenize
           so that constant strings are not passed in its constructor.

	* examples/OS/Process/process.cpp: do not pass constant strings
	   to ACE_Tokenize constructor.  Thanks to 
	   Werner Buchert <w.buchert@medat.de> and 
	   Don Hinton <dhinton@swan.fr>.

Wed Oct 17 23:56:45 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Proactor_Test.cpp:
	* tests/Proactor_Test.dsp:

	  Proactor test contributed by Alexander Libman
	  <alibman@baltimore.com>.

	* tests/tests.dsw:
