@@ -1,3 +1,10 @@
+Sun Oct 21 15:22:57 2001  Ossama Othman  <ossama@uci.edu>
+
+	* tests/Proactor_Test.cpp:
+
+	  Fixed warning about deprecated conversion of "const char *" to
+	  "char *" exhibited by GCC 3.0.x builds.
+
 Sun Oct 21 12:50:39 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
 
 	* ace/LSOCK.cpp: The ACE_LSOCK::recv_handle() was returning success
